# docs/swagger.yaml
@@ -1,9 +1,6 @@
 basePath: /api/v1
 definitions:
-  gin.H:
-    additionalProperties: {}
-    type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.AddExchangeReq:
+  dtos.AddExchangeReq:
     properties:
       name:
         description: Binance
@@ -12,7 +9,7 @@ definitions:
         description: wss://ws-api.binance.com:443/ws-api/v3
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.AddExchangeRes:
+  dtos.AddExchangeRes:
     properties:
       id:
         description: "1"
@@ -24,7 +21,7 @@ definitions:
         description: wss://ws-api.binance.com:443/ws-api/v3
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.AddSignalIntervalReq:
+  dtos.AddSignalIntervalReq:
     properties:
       exchange_id:
         description: "1"
@@ -36,7 +33,7 @@ definitions:
         description: BTCUSDT
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.AddSymbolReq:
+  dtos.AddSymbolReq:
     properties:
       exchange_id:
         type: string
@@ -44,7 +41,18 @@ definitions:
         description: BTCUSDT
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.GetSymbolRes:
+  dtos.GetExchangeRes:
+    properties:
+      id:
+        type: string
+      name:
+        description: Binance
+        type: string
+      ws_url:
+        description: wss://ws-api.binance.com:443/ws-api/v3
+        type: string
+    type: object
+  dtos.GetSymbolRes:
     properties:
       exchange_id:
         type: string
@@ -56,7 +64,7 @@ definitions:
       symbol:
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateExchangeReq:
+  dtos.UpdateExchangeReq:
     properties:
       id:
         type: string
@@ -67,7 +75,7 @@ definitions:
         description: wss://ws-api.binance.com:443/ws-api/v3
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateExchangeRes:
+  dtos.UpdateExchangeRes:
     properties:
       id:
         type: string
@@ -78,7 +86,7 @@ definitions:
         description: wss://ws-api.binance.com:443/ws-api/v3
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateSignalIntervalReq:
+  dtos.UpdateSignalIntervalReq:
     properties:
       exchange_id:
         description: "1"
@@ -93,7 +101,7 @@ definitions:
         description: BTCUSDT
         type: string
     type: object
-  github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateSymbolReq:
+  dtos.UpdateSymbolReq:
     properties:
       exchange_id:
         type: string
@@ -120,7 +128,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.AddSymbolReq'
+          $ref: '#/definitions/dtos.AddSymbolReq'
       produces:
       - application/json
       responses:
@@ -150,11 +158,14 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            items:
+              $ref: '#/definitions/dtos.GetExchangeRes'
+            type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
       summary: Get all exchanges
       tags:
       - exchanges
@@ -168,18 +179,19 @@ paths:
         name: exchange
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.AddExchangeReq'
+          $ref: '#/definitions/dtos.AddExchangeReq'
       produces:
       - application/json
       responses:
         "201":
           description: Successfully created exchange
           schema:
-            $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.AddExchangeRes'
+            $ref: '#/definitions/dtos.AddExchangeRes'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
       summary: Add exchange
       tags:
       - exchanges
@@ -200,11 +212,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
       summary: Delete an exchange
       tags:
       - exchanges
@@ -224,11 +238,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/dtos.GetExchangeRes'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
       summary: Get exchange by ID
       tags:
       - exchanges
@@ -247,18 +262,19 @@ paths:
         name: exchange
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateExchangeReq'
+          $ref: '#/definitions/dtos.UpdateExchangeReq'
       produces:
       - application/json
       responses:
         "200":
           description: Successfully updated exchange
           schema:
-            $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateExchangeRes'
+            $ref: '#/definitions/dtos.UpdateExchangeRes'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            $ref: '#/definitions/gin.H'
+            additionalProperties: true
+            type: object
       summary: Update an exchange
       tags:
       - exchanges
@@ -295,7 +311,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.AddSignalIntervalReq'
+          $ref: '#/definitions/dtos.AddSignalIntervalReq'
       produces:
       - application/json
       responses:
@@ -386,7 +402,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateSignalIntervalReq'
+          $ref: '#/definitions/dtos.UpdateSignalIntervalReq'
       produces:
       - application/json
       responses:
@@ -417,7 +433,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.GetSymbolRes'
+              $ref: '#/definitions/dtos.GetSymbolRes'
             type: array
         "400":
           description: Bad Request
@@ -474,7 +490,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.GetSymbolRes'
+            $ref: '#/definitions/dtos.GetSymbolRes'
         "400":
           description: Bad Request
           schema:
@@ -500,7 +516,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_SametAvcii_crypto-trade_pkg_dtos.UpdateSymbolReq'
+          $ref: '#/definitions/dtos.UpdateSymbolReq'
       produces:
       - application/json
       responses:
